--- a/src/Data.EF/ru.EmlSoft.WMS.Data.EF.csproj
+++ b/src/Data.EF/ru.EmlSoft.WMS.Data.EF.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Data.Abstract\ru.EmlSoft.WMS.Data.Abstract.csproj" />
+    <ProjectReference Include="..\Entity\ru.EmlSoft.WMS.Entity.csproj" />
   </ItemGroup>
 
 </Project>
