Add db definition on access and base warehouse

--- a/src/WMS/appsettings.json
+++ b/src/WMS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ru.EmlSoft.WMS-3DFE4F9C-9269-477D-9D87-DD4440322AFE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "User Id=WMS;Password=WMS;Data Source=OCI"
   },
   "Logging": {
     "LogLevel": {
