Add Register of company

--- a/src/WMS/appsettings.json
+++ b/src/WMS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User Id=WMS;Password=WMS;Data Source=OCI"
+    "DefaultConnection": "User Id=WMS;Password=vYve?qsAn6vyv$-;Data Source=OCI"
   },
   "Logging": {
     "LogLevel": {
