--- a/src/WMS/appsettings.json
+++ b/src/WMS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User Id=WMS;Password=vYve?qsAn6vyv$-;Data Source=OCI"
+    "DefaultConnection": "User Id=WMS;Password=vYve?qsAn6vyv$-;Data Source=(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.eu-frankfurt-1.oraclecloud.com))(connect_data=(service_name=gbb7dbddbeccae5_db202111021528_high.adb.oraclecloud.com))(security=(ssl_server_cert_dn=\"CN=adwc.eucom-central-1.oraclecloud.com, OU=Oracle BMCS FRANKFURT, O=Oracle Corporation, L=Redwood City, ST=California, C=US\"))))"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "LogLevel": {
+      "Default": "Trace"
+    },
+    "ConnectionString": "InstrumentationKey=85828c00-f5c8-419f-8e24-ac5cddc6caa8;IngestionEndpoint=https://germanywestcentral-1.in.applicationinsights.azure.com/"
+  }
 }
