add azure support

--- a/src/Data.EF/ru.EmlSoft.WMS.Data.EF.csproj
+++ b/src/Data.EF/ru.EmlSoft.WMS.Data.EF.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data.Abstract\ru.EmlSoft.WMS.Data.Abstract.csproj" />
-    <ProjectReference Include="..\Entity\ru.EmlSoft.WMS.Entity.csproj" />
+    <ProjectReference Include="..\Localization\ru.EmlSoft.WMS.Localization.csproj" />
   </ItemGroup>
 
 </Project>
