--- a/src/Data.Abstract/ru.EmlSoft.WMS.Data.Abstract.csproj
+++ b/src/Data.Abstract/ru.EmlSoft.WMS.Data.Abstract.csproj
@@ -1,11 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dto\ru.EmlSoft.WMS.Data.Dto.csproj" />
   </ItemGroup>
 
 </Project>
