--- a/src/WMS/appsettings.json
+++ b/src/WMS/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User Id=WMS;Password=vYve?qsAn6vyv$-;Data Source=(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.eu-frankfurt-1.oraclecloud.com))(connect_data=(service_name=gbb7dbddbeccae5_db202111021528_high.adb.oraclecloud.com))(security=(ssl_server_cert_dn=\"CN=adwc.eucom-central-1.oraclecloud.com, OU=Oracle BMCS FRANKFURT, O=Oracle Corporation, L=Redwood City, ST=California, C=US\")))"
+    "OracleConnection": "User Id=WMS;Password=vYve?qsAn6vyv$-;Data Source=(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.eu-frankfurt-1.oraclecloud.com))(connect_data=(service_name=gbb7dbddbeccae5_db202111021528_high.adb.oraclecloud.com))(security=(ssl_server_cert_dn=\"CN=adwc.eucom-central-1.oraclecloud.com, OU=Oracle BMCS FRANKFURT, O=Oracle Corporation, L=Redwood City, ST=California, C=US\")))",
+    "MsSqlLocalConnection": "Server=(localdb)\\mssqllocaldb;Database=LocalWMS;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MsSqlConnection": "Server=EmlWms;Database=WMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
