--- a/src/Dto/ru.EmlSoft.WMS.Data.Dto.csproj
+++ b/src/Dto/ru.EmlSoft.WMS.Data.Dto.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Localization\ru.EmlSoft.WMS.Localization.csproj" />
+  </ItemGroup>
+
 </Project>
