--- a/src/Data.EF/ru.EmlSoft.WMS.Data.EF.csproj
+++ b/src/Data.EF/ru.EmlSoft.WMS.Data.EF.csproj
@@ -8,14 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.2" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="6.21.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Data.Abstract\ru.EmlSoft.WMS.Data.Abstract.csproj" />
-    <ProjectReference Include="..\Localization\ru.EmlSoft.WMS.Localization.csproj" />
+    <ProjectReference Include="..\Data.Abstract\ru.emlsoft.WMS.Data.Abstract.csproj" />
+    <ProjectReference Include="..\Localization\ru.emlsoft.WMS.Localization.csproj" />
+    <ProjectReference Include="..\Utilities\ru.EmlSoft.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
