--- a/src/WMS/Properties/launchSettings.json
+++ b/src/WMS/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "ru.EmlSoft.WMS": {
+    "ru.emlsoft.WMS": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
