Fix deploy database

--- a/src/WMS/appsettings.json
+++ b/src/WMS/appsettings.json
@@ -5,7 +5,7 @@
     "MsSqlConnection": "Server=EmlWms;Database=WMS;Trusted_Connection=True;MultipleActiveResultSets=true",
     "MsSqlCompactConnection": "Server=EmlWms;Database=WMS;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "Database": "MsSqlCompact",
+  "Database": "Oracle",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
